--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,80 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap");
+
+:root {
+  --color-white: #f3f3f3;
+  --color-darkblue: #1b1b32;
+  --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
+  --color-green: #37af65;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  color: var(--color-white);
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.8;
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background: var(--color-darkblue);
+  background-image: linear-gradient(
+      115deg,
+      rgba(58, 58, 158, 0.8),
+      rgba(136, 136, 206, 0.7)
+    ),
+    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+h1 {
+  font-weight: 400;
+  line-height: 1.2;
+}
+p {
+  font-size: 1.2rem;
+}
+h1,
+p {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+label {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+.textCenter {
+  text-align: center;
+}
+.container {
+  width: 100%;
+  margin: 3.2rem auto 0 auto;
+}
+.header {
+  padding: 0 0.625rem;
+  margin-bottom: 1.875rem;
+}
+form {
+  background: var(--color-darkblue-alpha);
+  padding: 2.5rem 0.625rem;
+  border-radius: 0.25rem;
+}
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
 }
 
-html{
-    font-size: 15px;
-
-}
-
-body{
-    font-family: arial;
-    margin:0;
-    text-align: center;
-    color: #333;
-    font-size: 1.3rem;
-    line-height: 1;
-}
-
-h1{
-    font-size: 3rem;
-    margin-bottom: 0;
-}
-
-@media(max-width:460px){
-    h1{
-        font-size: 3rem;
-        line-height: 1;
-    }
-
-    #main{
-        margin: 0;
-    }
-
-    #img-caption{
-        font-size: 1.2rem;
-    }
-}
-
-
-#main p {
-    margin-top: 28px;
-    margin-bottom: 17px;
-    font-size: 15px !important;
-}
-
-
-h2{
-    font-size: 3rem;
-}
-
-a{
-    color: #477ca7;
-}
-
-a:visited{
-    color:#74638f;
-}
-
-#main{
-    margin: 30px 8px;
-    padding: 15px;
-    border-radius: 5px;
-    background-color: #eee;
-}
-
-img{
-    max-width: 100%;
-    display: block;
-    height: auto;
-    margin: 0 auto;
-}
-
-#img-div{
-    background-color: white;
-    margin: 0;
-    padding: 10px;
-}
-
-#img-caption{
-    margin: 15px 0 5px 0;
-    font-size: 15px !important;
-}
-
-#headline{
-    margin: 50px 0;
-    text-align: center;
-}
-
-ul{
-    max-width: 550px;
-    text-align: left;
-    line-height: 1.5;
-    margin: 0 auto 50px auto;
-}
-
-li{
-    margin: 14px 0;
-    font-size: 15px !important;
-}
-
-
-
-blockquote{
-    font-style: italic;
-    max-width: 545px;
-    margin: 0 auto 50px auto;
-    text-align: left;
-    line-height: 1.6rem
-}
-
-blockquote cite{
-    font-size: 15px !important;
-}
-
-h3{
-    font-size: 20px !important;
-    padding-bottom: 20px;
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
 }
