--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
   --color-green: #37af65;
 }
+*, *::before, *::after{
+  box-sizing: border-box;
+}
 body {
   font-family: "Poppins", sans-serif;
   color: var(--color-white);
@@ -56,11 +59,22 @@ label {
 }
 .container {
   width: 100%;
-  margin: 3.2rem auto 0 auto;
+  margin: 3.125rem auto 0 auto;
 }
 .header {
   padding: 0 0.625rem;
   margin-bottom: 1.875rem;
+}
+
+.Fgroup{
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
+
+.descrip{
+  font-style: italic;
+  font-weight: 200;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 form {
   background: var(--color-darkblue-alpha);
@@ -78,3 +92,65 @@ form {
     max-width: 720px;
   }
 }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+input, button, select, textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.form-control:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.input-radio,
+.input-checkbox {
+  display: inline-block;
+  margin-right: 0.625rem;
+  min-height: 1.25rem;
+  min-width: 1.25rem;
+}
+
+.clue {
+  margin-left: 0.3rem;
+  font-size: 1rem;
+  color: #e4e4e4;
+}
+
+.input-textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 0.625rem;
+  resize: vertical;
+}
+
+button{
+  border: none;
+}
+
+.submit-button {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  background: var(--color-green);
+  color: inherit;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
